@@ -10,7 +10,6 @@ import java.util.stream.Collectors;
 
 import com.esferalia.aon.occam.api.AON;
 import com.esferalia.aon.occam.api.AONContext;
-import com.esferalia.aon.occam.api.model.AonConfiguration;
 import com.esferalia.aon.occam.api.model.Customer;
 import com.esferalia.aon.occam.api.model.EnterpriseActivity;
 import com.esferalia.aon.occam.api.model.Occam;
@@ -37,18 +36,16 @@ import com.esferalia.aon.watson.util.AonNumberUtils;
 import com.github.javafaker.Faker;
 
 public class InvoiceFaker {
-	private static Faker faker = new Faker( new Locale("es") );
+	private static Faker faker = new Faker( Locale.of("es") );
 	
 	public static class InvoiceFakerParams {
 		private AONContext ctx;
-		private AonConfiguration config;
 		private Date issueDate;
 		private InvoiceWithholding withholding;
 		private boolean mustForceRegistry;
 		
-		public InvoiceFakerParams(AONContext ctx, AonConfiguration config) {
+		public InvoiceFakerParams(AONContext ctx) {
 			this.ctx = ctx;
-			this.config = config;
 		}
 		
 		public AONContext getCtx() {
@@ -56,13 +53,6 @@ public class InvoiceFaker {
 		}
 		public InvoiceFakerParams setCtx(AONContext ctx) {
 			this.ctx = ctx;
-			return this;
-		}
-		public AonConfiguration getConfig() {
-			return config;
-		}
-		public InvoiceFakerParams setConfig(AonConfiguration config) {
-			this.config = config;
 			return this;
 		}
 		public Date getIssueDate() {
@@ -107,6 +97,7 @@ public class InvoiceFaker {
 			@Override 
 			public InvoiceType getType() { return InvoiceType.SALES; }
 			
+			@Override 
 			public Invoice get( InvoiceFakerParams params ) {
 				Invoice invoice = InvoiceFaker.getHeader(params, InvoiceType.SALES);
 				invoice.setTransaction(InvoiceTransactionType.NATIONAL);
@@ -118,6 +109,7 @@ public class InvoiceFaker {
 			@Override 
 			public InvoiceType getType() { return InvoiceType.SALES; }
 
+			@Override 
 			public Invoice get( InvoiceFakerParams params ) {
 				Invoice invoice = InvoiceFaker.getHeader(params, InvoiceType.SALES);
 				invoice.setTransaction(InvoiceTransactionType.NATIONAL);
@@ -130,6 +122,7 @@ public class InvoiceFaker {
 			@Override 
 			public InvoiceType getType() { return InvoiceType.SALES; }
 
+			@Override 
 			public Invoice get( InvoiceFakerParams params ) {
 				Invoice invoice = InvoiceFaker.getHeader(params, InvoiceType.SALES);
 				invoice.setTransaction(InvoiceTransactionType.CAN_CEU_MEL);
@@ -141,6 +134,7 @@ public class InvoiceFaker {
 			@Override 
 			public InvoiceType getType() { return InvoiceType.SALES; }
 
+			@Override 
 			public Invoice get( InvoiceFakerParams params ) {
 				Invoice invoice = InvoiceFaker.getHeader(params, InvoiceType.SALES);
 				invoice.setTransaction(InvoiceTransactionType.CAN_CEU_MEL);
@@ -153,6 +147,7 @@ public class InvoiceFaker {
 			@Override 
 			public InvoiceType getType() { return InvoiceType.SALES; }
 
+			@Override 
 			public Invoice get( InvoiceFakerParams params ) {
 				Invoice invoice = InvoiceFaker.getHeader(params, InvoiceType.SALES);
 				invoice.setTransaction(InvoiceTransactionType.NATIONAL);
@@ -165,6 +160,7 @@ public class InvoiceFaker {
 			@Override 
 			public InvoiceType getType() { return InvoiceType.PURCHASE; }
 
+			@Override 
 			public Invoice get( InvoiceFakerParams params ) {
 				Invoice invoice = InvoiceFaker.getHeader(params, InvoiceType.PURCHASE);
 				invoice.setTransaction(InvoiceTransactionType.NATIONAL);
@@ -176,6 +172,7 @@ public class InvoiceFaker {
 			@Override 
 			public InvoiceType getType() { return InvoiceType.PURCHASE; }
 			
+			@Override 
 			public Invoice get( InvoiceFakerParams params ) {
 				Invoice invoice = InvoiceFaker.getHeader(params, InvoiceType.PURCHASE);
 				invoice.setTransaction(InvoiceTransactionType.NATIONAL);
@@ -188,6 +185,7 @@ public class InvoiceFaker {
 			@Override 
 			public InvoiceType getType() { return InvoiceType.PURCHASE; }
 
+			@Override 
 			public Invoice get( InvoiceFakerParams params ) {
 				Invoice invoice = InvoiceFaker.getHeader(params, InvoiceType.PURCHASE);
 				invoice.setTransaction(InvoiceTransactionType.INTRACOMMUNITY);
@@ -200,6 +198,7 @@ public class InvoiceFaker {
 			@Override 
 			public InvoiceType getType() { return InvoiceType.PURCHASE; }
 
+			@Override 
 			public Invoice get( InvoiceFakerParams params ) {
 				Invoice invoice = InvoiceFaker.getHeader(params, InvoiceType.PURCHASE);
 				invoice.setTransaction(InvoiceTransactionType.OTHER_ISP);
@@ -212,6 +211,7 @@ public class InvoiceFaker {
 			@Override 
 			public InvoiceType getType() { return InvoiceType.PURCHASE; }
 
+			@Override 
 			public Invoice get( InvoiceFakerParams params ) {
 				Invoice invoice = InvoiceFaker.getHeader(params, InvoiceType.PURCHASE);
 				invoice.setTransaction(InvoiceTransactionType.EXTRACOMMUNITY);
@@ -224,6 +224,7 @@ public class InvoiceFaker {
 			@Override 
 			public InvoiceType getType() { return InvoiceType.PURCHASE; }
 
+			@Override 
 			public Invoice get( InvoiceFakerParams params ) {
 				Invoice invoice = InvoiceFaker.getHeader(params, InvoiceType.PURCHASE);
 				invoice.setTransaction(InvoiceTransactionType.EXTRACOMMUNITY);
@@ -236,6 +237,7 @@ public class InvoiceFaker {
 			@Override 
 			public InvoiceType getType() { return InvoiceType.PURCHASE; }
 
+			@Override 
 			public Invoice get( InvoiceFakerParams params ) {
 				Invoice invoice = InvoiceFaker.getHeader(params, InvoiceType.PURCHASE);
 				invoice.setTransaction(InvoiceTransactionType.EXTRACOMMUNITY);
@@ -248,6 +250,7 @@ public class InvoiceFaker {
 			@Override 
 			public InvoiceType getType() { return InvoiceType.PURCHASE; }
 
+			@Override 
 			public Invoice get( InvoiceFakerParams params ) {
 				Invoice invoice = InvoiceFaker.getHeader(params, InvoiceType.PURCHASE);
 				invoice.setTransaction(InvoiceTransactionType.EXTRACOMMUNITY);
@@ -261,6 +264,7 @@ public class InvoiceFaker {
 			@Override 
 			public InvoiceType getType() { return InvoiceType.EXPENSES; }
 
+			@Override 
 			public Invoice get( InvoiceFakerParams params ) {
 				Invoice invoice = InvoiceFaker.getHeader(params, InvoiceType.EXPENSES);
 				invoice.setTransaction(InvoiceTransactionType.NATIONAL);
@@ -273,6 +277,7 @@ public class InvoiceFaker {
 			@Override 
 			public InvoiceType getType() { return InvoiceType.EXPENSES; }
 
+			@Override 
 			public Invoice get( InvoiceFakerParams params ) {
 				Invoice invoice = InvoiceFaker.getHeader(params, InvoiceType.EXPENSES);
 				invoice.setTransaction(InvoiceTransactionType.NATIONAL);
@@ -285,6 +290,7 @@ public class InvoiceFaker {
 			@Override 
 			public InvoiceType getType() { return InvoiceType.EXPENSES; }
 			
+			@Override 
 			public Invoice get( InvoiceFakerParams params ) {
 				Invoice invoice = InvoiceFaker.getHeader(params, InvoiceType.EXPENSES);
 				invoice.setTransaction(InvoiceTransactionType.NATIONAL);
@@ -296,6 +302,7 @@ public class InvoiceFaker {
 			@Override 
 			public InvoiceType getType() { return InvoiceType.SALES; }
 			
+			@Override 
 			public Invoice get( InvoiceFakerParams params ) {
 				Invoice invoice = InvoiceFaker.getHeader(params, InvoiceType.SALES);
 				invoice.setTransaction(InvoiceTransactionType.NATIONAL);
@@ -309,6 +316,7 @@ public class InvoiceFaker {
 			@Override 
 			public InvoiceType getType() { return InvoiceType.SALES; }
 
+			@Override 
 			public Invoice get( InvoiceFakerParams params ) {
 				Invoice invoice = InvoiceFaker.getHeader(params, InvoiceType.SALES);
 				invoice.setTransaction(InvoiceTransactionType.NATIONAL);
@@ -322,6 +330,7 @@ public class InvoiceFaker {
 			@Override 
 			public InvoiceType getType() { return InvoiceType.PURCHASE; }
 
+			@Override 
 			public Invoice get( InvoiceFakerParams params ) {
 				Invoice invoice = InvoiceFaker.getHeader(params, InvoiceType.PURCHASE);
 				invoice.setTransaction(InvoiceTransactionType.NATIONAL);
@@ -335,6 +344,7 @@ public class InvoiceFaker {
 			@Override 
 			public InvoiceType getType() { return InvoiceType.EXPENSES; }
 
+			@Override 
 			public Invoice get( InvoiceFakerParams params ) {
 				Invoice invoice = InvoiceFaker.getHeader(params, InvoiceType.EXPENSES);
 				invoice.setTransaction(InvoiceTransactionType.NATIONAL);
@@ -378,16 +388,16 @@ public class InvoiceFaker {
 			public Void visitSales(Invoice invoice) {
 				Customer customer = AonRandom.getCustomer( params.getCtx() );
 				fillRegistryData(invoice, customer);
-				invoice.setSeries(params.getConfig().getDefaultInvoiceSeries());
+				invoice.setSeries(params.getCtx().getConfiguration().getDefaultInvoiceSeries());
 				invoice.setNumber( AON.getInvoiceNextNumber(params.getCtx(), new Byte[]{invoice.getType().value()}, invoice.getSeries()));
 				
 				invoice.setScope(customer.getScope());
 				invoice.setTransaction( customer.getTransaction() );
 				
 				invoice.setService( AonRandom.gt(80) );
-				invoice.setVatAccrualPayment(invoice.isNational() && params.getConfig().getCompany().isVatAccrualPayment());
+				invoice.setVatAccrualPayment(invoice.isNational() && params.getCtx().getConfiguration().getCompany().isVatAccrualPayment());
 				invoice.setSurcharge(customer.isSurcharge());
-				invoice.setWithholding(customer.isWithholding() && params.getConfig().getCompany().isWithholding());
+				invoice.setWithholding(customer.isWithholding() && params.getCtx().getConfiguration().getCompany().isWithholding());
 				invoice.setWithholdingFarmer(false);
 				return null;
 			}
@@ -407,7 +417,7 @@ public class InvoiceFaker {
 				
 				invoice.setService( AonRandom.gt(40) );
 				invoice.setVatAccrualPayment(invoice.isNational() && supplier.isVatAccrualPayment());
-				invoice.setSurcharge(params.getConfig().getCompany().isSurcharge());
+				invoice.setSurcharge(params.getCtx().getConfiguration().getCompany().isSurcharge());
 				invoice.setWithholding(supplier.isWithholding());
 				invoice.setWithholdingFarmer(supplier.isWithholdingFarmer());
 				return null;
@@ -516,7 +526,7 @@ public class InvoiceFaker {
 		InvoiceDetail detail = new InvoiceDetail();
 		detail.setDomain(invoice.getDomain())
 			.setInvoice(invoice)
-			.setWorkplace( params.getConfig().getWorkplaces().getFirst() )
+			.setWorkplace( params.getCtx().getConfiguration().getWorkplaces().getFirst() )
 			.setDescription(AonRandom.item(5, 50))
 			.setQuantity(AonRandom.getDouble(0, 10))
 			.setDiscountExpression( AonRandom.gt(10)
@@ -719,50 +729,50 @@ public class InvoiceFaker {
 			?getRandomSales(params)
 			:getRandomNotSales(params);
 	}
-	public static Invoice getSalesNational(AONContext ctx, AonConfiguration configuration) {
-		InvoiceFakerParams params = new InvoiceFakerParams(ctx,configuration);
+	public static Invoice getSalesNational(AONContext ctx) {
+		InvoiceFakerParams params = new InvoiceFakerParams(ctx);
 		return InvoiceFakerTypes.SALES_NATIONAL.get(params);
 	}
-	public static Invoice getSalesCanCeuService(AONContext ctx, AonConfiguration configuration) {
-		return getSalesCanCeuService(new InvoiceFakerParams(ctx,configuration));
+	public static Invoice getSalesCanCeuService(AONContext ctx) {
+		return getSalesCanCeuService(new InvoiceFakerParams(ctx));
 	}
 	public static Invoice getSalesCanCeuService(InvoiceFakerParams params) {
 		return InvoiceFakerTypes.SALES_CAN_CEU_MEL_SERVICE.get(params);
 	}
-	public static Invoice getSalesCanCeu(AONContext ctx, AonConfiguration configuration) {
-		return getSalesCanCeu(new InvoiceFakerParams(ctx,configuration));
+	public static Invoice getSalesCanCeu(AONContext ctx) {
+		return getSalesCanCeu(new InvoiceFakerParams(ctx));
 	}
 	public static Invoice getSalesCanCeu(InvoiceFakerParams params) {
 		return InvoiceFakerTypes.SALES_CAN_CEU_MEL.get(params);
 	}
-	public static Invoice getExpensesNational(AONContext ctx, AonConfiguration configuration) {
-		InvoiceFakerParams params = new InvoiceFakerParams(ctx,configuration);
+	public static Invoice getExpensesNational(AONContext ctx) {
+		InvoiceFakerParams params = new InvoiceFakerParams(ctx);
 		return InvoiceFakerTypes.EXPENSES_NATIONAL.get(params);
 	}
-	public static Invoice getPurchaseNational(AONContext ctx, AonConfiguration configuration) {
-		InvoiceFakerParams params = new InvoiceFakerParams(ctx,configuration);
+	public static Invoice getPurchaseNational(AONContext ctx) {
+		InvoiceFakerParams params = new InvoiceFakerParams(ctx);
 		return InvoiceFakerTypes.PURCHASE_NATIONAL.get(params);
 	}
-	public static Invoice getPurchaseExtracommunity(AONContext ctx, AonConfiguration configuration) {
-		return getPurchaseExtracommunity( new InvoiceFakerParams(ctx,configuration));
+	public static Invoice getPurchaseExtracommunity(AONContext ctx) {
+		return getPurchaseExtracommunity( new InvoiceFakerParams(ctx));
 	}
 	public static Invoice getPurchaseExtracommunity(InvoiceFakerParams params) {
 		return InvoiceFakerTypes.PURCHASE_EXTRACOMMUNITY.get(params);
 	}
-	public static Invoice getPurchaseExtracommunityVatImport(AONContext ctx, AonConfiguration configuration) {
-		return getPurchaseExtracommunityVatImport( new InvoiceFakerParams(ctx,configuration) ); 
+	public static Invoice getPurchaseExtracommunityVatImport(AONContext ctx) {
+		return getPurchaseExtracommunityVatImport( new InvoiceFakerParams(ctx) ); 
 	}
 	public static Invoice getPurchaseExtracommunityVatImport(InvoiceFakerParams params) {
 		return InvoiceFakerTypes.PURCHASE_EXTRACOMMUNITY_VAT_IMPORT.get(params);
 	}
-	public static Invoice getPurchaseCanCeu(AONContext ctx, AonConfiguration configuration) {
-		return getPurchaseCanCeu(new InvoiceFakerParams(ctx,configuration)); 
+	public static Invoice getPurchaseCanCeu(AONContext ctx) {
+		return getPurchaseCanCeu(new InvoiceFakerParams(ctx)); 
 	}
 	public static Invoice getPurchaseCanCeu(InvoiceFakerParams params) {
 		return InvoiceFakerTypes.PURCHASE_CAN_CEU_MEL.get(params);
 	}
-	public static Invoice getPurchaseCanCeuVatImport(AONContext ctx, AonConfiguration configuration) {
-		return getPurchaseCanCeuVatImport(new InvoiceFakerParams(ctx,configuration)); 
+	public static Invoice getPurchaseCanCeuVatImport(AONContext ctx) {
+		return getPurchaseCanCeuVatImport(new InvoiceFakerParams(ctx)); 
 	}
 	public static Invoice getPurchaseCanCeuVatImport(InvoiceFakerParams params) {
 		return InvoiceFakerTypes.PURCHASE_CAN_CEU_MEL_VAT_IMPORT.get(params);
@@ -774,8 +784,8 @@ public class InvoiceFaker {
 				.setWithholdingType(wt))
 				.setMustForceRegistry(true);
 	}
-	public static Invoice getRetentionInvoice( AONContext ctx, Occam occam, AonConfiguration configuration, final WithholdingType wt) {
-		InvoiceFakerParams params = new InvoiceFakerParams(ctx,configuration)
+	public static Invoice getRetentionInvoice( AONContext ctx, Occam occam, final WithholdingType wt) {
+		InvoiceFakerParams params = new InvoiceFakerParams(ctx)
 			.setIssueDate(AonRandom.getYearDay(new Date()));
 		InvoiceFaker.fillRetentionParams(ctx, params, wt);
 		return InvoiceFaker.getExpensesRetention(params);
@@ -784,8 +794,8 @@ public class InvoiceFaker {
 		return InvoiceFakerTypes.EXPENSES_RETENTION.get(invParams);
 	}
 
-	public static Invoice getPurchaseFarmerRetention(AONContext ctx, AonConfiguration configuration) {
-		InvoiceFakerParams invParams = new InvoiceFakerParams(ctx,configuration);
+	public static Invoice getPurchaseFarmerRetention(AONContext ctx) {
+		InvoiceFakerParams invParams = new InvoiceFakerParams(ctx);
 		return getPurchaseFarmerRetention(invParams);
 	}
 	public static Invoice getPurchaseFarmerRetention(InvoiceFakerParams invParams) {
@@ -803,8 +813,8 @@ public class InvoiceFaker {
 		return InvoiceFakerTypes.SALES_FARMER_RETENTION.get(invParams);
 	}
 	
-	public static Invoice getSalesRetentionInvoice( AONContext ctx, Occam occam, AonConfiguration configuration, final WithholdingType wt) {
-		InvoiceFakerParams params = new InvoiceFakerParams(ctx,configuration)
+	public static Invoice getSalesRetentionInvoice( AONContext ctx, Occam occam, final WithholdingType wt) {
+		InvoiceFakerParams params = new InvoiceFakerParams(ctx)
 			.setIssueDate(AonRandom.getYearDay(new Date()));
 		InvoiceFaker.fillRetentionParams(ctx, params, wt);
 		return InvoiceFakerTypes.SALES_RETENTION.get(params);
